syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/addon.proto";
import "stremio/core/types/manifest.proto";

message AddonsWithFilters {
  optional Selected selected = 1;
  required Selectable selectable = 2;
  optional LoadableAddonCatalog catalog = 3;

  message Selected {
    required stremio.core.types.ResourceRequest request = 1;
  }
  message Selectable {
    repeated SelectableType types = 1;
    repeated SelectableCatalog catalogs = 2;
  }

  message SelectableType {
    required string type = 1;
    required bool selected = 2;
    required stremio.core.types.ResourceRequest request = 3;
  }

  message SelectableCatalog {
    required string name = 1;
    required bool selected = 2;
    required stremio.core.types.ResourceRequest request = 3;
  }
}

message LoadableAddonCatalog {
  required stremio.core.types.ResourceRequest request = 1;
  oneof content {
    Loading loading = 2;
    Error error = 3;
    Addons ready = 4;
  }
}

message Addons {
  repeated stremio.core.types.DescriptorPreview items = 1;
}