syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/profile.proto";

message Ctx {
  required stremio.core.types.Profile profile = 1;
  required Events events = 2;
}

message Events {
  required LoadableModal modal = 1;
  required LoadableNotification notification = 2;
}

message EventModal {
  required string id = 1;
  required string title = 2;
  required string message = 3;
  required string image_url = 4;
  optional ModalAddon addon = 5;
  optional string external_url = 6;

  message ModalAddon {
    required string manifest_url = 5;
    required string name = 6;
  }
}

message EventNotification {
  required string id = 1;
  required string title = 2;
  required string message = 3;
  optional string external_url = 7;
}

message LoadableModal {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    LoadedModal ready = 3;
  }
}

message LoadedModal {
  optional EventModal modal = 1;
}

message LoadableNotification {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    LoadedNotification ready = 3;
  }
}

message LoadedNotification {
  optional EventNotification notification = 1;
}