syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime";

import "google/protobuf/empty.proto";
import "stremio/core/runtime/event.proto";
import "stremio/core/runtime/field.proto";

message EnvError{
  required int32 code = 1;
  required string message = 2;
}

message RuntimeEvent {
  oneof event {
    NewState new_state = 1;
    Event core_event = 2;
  }

  message NewState {
    repeated Field fields = 1;
  }
}